<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:background="?colorOnPrimary"
    tools:context=".SemiDetached">

    <TextView
        android:id="@+id/textViewSemi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Semi-Detached Home Selection"
        android:textSize="20dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="100dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp">

            <CheckBox
                android:id="@+id/checkBoxSemi1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/semi1"
                android:layout_alignParentLeft="true"/>

            <ImageView
                android:id="@+id/imageSemi1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:srcCompat="@drawable/semi1"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp">

            <CheckBox
                android:id="@+id/checkBoxSemi2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/semi2"
                android:layout_alignParentLeft="true"/>

            <ImageView
                android:id="@+id/imageSemi2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:srcCompat="@drawable/semi2"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp">

            <CheckBox
                android:id="@+id/checkBoxSemi3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/semi3"
                android:layout_alignParentLeft="true"/>

            <ImageView
                android:id="@+id/imageSemi3"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:srcCompat="@drawable/semi3"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>

        <Button
            android:id="@+id/btnSemi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:text="@string/btnCheckOut"
            android:textSize="16dp" />


    </LinearLayout>

</FrameLayout>
