<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:background="?colorOnPrimary"
    tools:context=".Condo">

    <TextView
        android:id="@+id/textViewCondo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Condominium Selection"
        android:textSize="20dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="100dp"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp">

            <CheckBox
                android:id="@+id/checkBoxCondo1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/condo1"
                android:layout_alignParentLeft="true"/>

            <ImageView
                android:id="@+id/imageCondo1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:srcCompat="@drawable/condo1"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp">

            <CheckBox
                android:id="@+id/checkBoxCondo2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/condo2"
                android:layout_alignParentLeft="true"/>

            <ImageView
                android:id="@+id/imageCondo2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:srcCompat="@drawable/condo2"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp">

            <CheckBox
                android:id="@+id/checkBoxCondo3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/condo3"
                android:layout_alignParentLeft="true"/>

            <ImageView
                android:id="@+id/imageCondo3"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:srcCompat="@drawable/condo3"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>

        <Button
            android:id="@+id/btnCondo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:text="@string/btnCheckOut"
            android:textSize="16dp" />


    </LinearLayout>

</FrameLayout>
